Fixed tests with kafka. Now everything is working